--- a/custom_item.css
+++ b/custom_item.css
@@ -1,12 +1,48 @@
 body{   
     font-family: Arial, Helvetica, sans-serif;
-    background-color: gray;
+    background-color:gainsboro;
 }
-.infor{
+.page_detail{
+    display: grid;
+    grid-template-rows: 80% 20%;
+}
+.container_product{
+    width: 700px;
     margin: auto;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 10px;
+}
+.container-left{
+    display: grid;
+    grid-template-rows: 300px 300px;
+}
+/* hiển thị hình ảnh */
+.img-view{
+    /* width: 300px; */
+    /* margin: auto; */
+    display: grid;
+    grid-template-columns: 20% 80%;
+  
+}
+.img-view1{
+}
+.img-view2{
+    
+}
+.itemview{
+    padding-bottom: 10px;
+    padding-right: 10px;
+    cursor: pointer;
+}
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
+/* hiển thị thông tin */
+.infor{
     width: 364px;
 }
-
 .group_infodetail{
    
     width: 364px;
@@ -56,4 +92,18 @@ body{
 .rowItemIcon{
     line-height: 25px;
     color: #8f939c;
+}
+
+/* hiển thị comment */
+.container_cmt{
+    width: 350px;
+    background-color: white;
+    margin: auto;
+}
+h5, .h5 {
+    font-size: initial;
+    font-weight: bold;
+    color: #8f939c;
+    margin-top: 10px;
+    font-family: inherit;
 }
