--- a/custom_item.css
+++ b/custom_item.css
@@ -17,6 +17,10 @@ body{
     display: grid;
     grid-template-rows: 300px 300px;
 }
+/* tựa đề */
+.title{
+    padding:10px;font-weight:bold;
+}
 /* hiển thị hình ảnh */
 .img-view{
     /* width: 300px; */
@@ -25,10 +29,9 @@ body{
     grid-template-columns: 20% 80%;
   
 }
-.img-view1{
-}
-.img-view2{
-    
+img{
+    width: 100%;
+    height: 100%;
 }
 .itemview{
     padding-bottom: 10px;
@@ -88,6 +91,7 @@ body{
     padding-bottom: 10px;
     display: grid;
     grid-template-columns: 10% 90%;
+    font-weight:bold;font-size:15px;color: #8f939c
 }
 .rowItemIcon{
     line-height: 25px;
@@ -106,4 +110,10 @@ h5, .h5 {
     color: #8f939c;
     margin-top: 10px;
     font-family: inherit;
+}
+.form-control{
+    width:330px;margin: auto
+}
+.edit{
+    margin:10px 10px;
 }
